update logo href, and tooltip

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <nav class="top-nav">
         <div class="nav-content">
-            <div class="logo">
+            <a href="https://sparkingtiming.com" class="logo" target="_blank" rel="noopener noreferrer">
                 <img src="assets/LOGO.png" alt="SparkingTiming Logo" class="logo-img">
                 <span class="logo-text">SparkingTiming</span>
-            </div>
+            </a>
             <a href="https://sparkingtiming.com" class="explore-more" target="_blank" rel="noopener noreferrer">探索更多</a>
         </div>
     </nav>
@@ -43,7 +43,7 @@
             </div>
             <div class="input-group">
                 <label>出生地</label>
-                <input type="text" id="birthplace" placeholder="请输入出生城市 请关注正式版发布">
+                <input type="text" id="birthplace" placeholder="请输入出生城市">
             </div>
             <button class="submit-btn">
                 <span class="btn-text">推演</span>
