--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="input-group">
                 <label>出生地</label>
-                <input type="text" id="birthplace" placeholder="请输入出生城市 请关注正式版发布">
+                <input type="text" id="birthplace" placeholder="请输入出生城市">
             </div>
             <button class="submit-btn">
                 <span class="btn-text">推演</span>
